--- a/Proyecto_1/Proyecto_1.csproj
+++ b/Proyecto_1/Proyecto_1.csproj
@@ -48,12 +48,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Proyecto_1.Program22</StartupObject>
+    <StartupObject>Proyecto_1.EjemploPack.Program28</StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LibreriaFundanet">
-      <HintPath>..\..\LibreriaFundanet\LibreriaFundanet\obj\Debug\netstandard2.0\LibreriaFundanet.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -65,6 +62,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ejecutables\Program22.cs" />
+    <Compile Include="EjemploBolsa\Bolsa.cs" />
+    <Compile Include="EjemploBolsa\Golosina.cs" />
+    <Compile Include="EjemploBolsa\IPrecio.cs" />
+    <Compile Include="EjemploBolsa\Program27.cs" />
+    <Compile Include="EjemploPack\Golosina.cs" />
+    <Compile Include="EjemploPack\IPrecio.cs" />
     <Compile Include="EmpresaAlquiler\Alquiler.cs" />
     <Compile Include="Clases\Alumno.cs" />
     <Compile Include="Clases\BareBone.cs" />
@@ -111,6 +114,34 @@
     <Compile Include="Ejecutables\Program3.cs" />
     <Compile Include="Ejecutables\Program2.cs" />
     <Compile Include="Ejecutables\Program.cs" />
+    <Compile Include="EnchufeSmart\Bombilla.cs" />
+    <Compile Include="EnchufeSmart\BombillaSmart.cs" />
+    <Compile Include="EnchufeSmart\Cocina.cs" />
+    <Compile Include="EnchufeSmart\ComparadorPotencia.cs" />
+    <Compile Include="EnchufeSmart\EnchufeSmartAdaptador.cs" />
+    <Compile Include="EnchufeSmart\Frigorifico.cs" />
+    <Compile Include="EnchufeSmart\IEncendible.cs" />
+    <Compile Include="EnchufeSmart\IEncendibleVoz.cs" />
+    <Compile Include="EnchufeSmart\Program26.cs" />
+    <Compile Include="EnchufeSmart\Program25.cs" />
+    <Compile Include="InterfaceCocina\Bombilla.cs" />
+    <Compile Include="InterfaceCocina\BombillaSmart.cs" />
+    <Compile Include="InterfaceCocina\Cocina.cs" />
+    <Compile Include="InterfaceCocina\Frigorifico.cs" />
+    <Compile Include="InterfaceCocina\IEncendibleSmart.cs" />
+    <Compile Include="InterfaceCocina\IEncendible.cs" />
+    <Compile Include="InterfaceCocina\Lavadora.cs" />
+    <Compile Include="InterfaceCocina\Program24.cs" />
+    <Compile Include="Interface\Conducible.cs" />
+    <Compile Include="Interface\IConducibleConectable.cs" />
+    <Compile Include="Interface\IConectable.cs" />
+    <Compile Include="Interface\Moto.cs" />
+    <Compile Include="Interface\Patinete.cs" />
+    <Compile Include="Interface\Program23.cs" />
+    <Compile Include="Interface\Segway.cs" />
+    <Compile Include="EjemploPack\Chocolatina.cs" />
+    <Compile Include="EjemploPack\Pack.cs" />
+    <Compile Include="EjemploPack\Program28.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Clases\Rectangulo.cs" />
   </ItemGroup>
@@ -129,5 +160,12 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LibreriaSemicrol\LibreriaFundanet.csproj">
+      <Project>{044d0fd4-53d6-44dc-a7da-c666c27014ae}</Project>
+      <Name>LibreriaFundanet</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
