--- a/Transaccion/Transaccion.csproj
+++ b/Transaccion/Transaccion.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9483B4BD-70C8-487B-8EFA-434A47433EC0}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LibreriaADO</RootNamespace>
-    <AssemblyName>LibreriaADO</AssemblyName>
+    <ProjectGuid>{9026D26F-B4A7-42C6-AFD7-085E48D2D397}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>Transaccion</RootNamespace>
+    <AssemblyName>Transaccion</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,19 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Semicrol\Cursos\Persistencia\Factura.cs" />
-    <Compile Include="Semicrol\Cursos\Persistencia\FacturaRepository.cs" />
-    <Compile Include="Semicrol\Cursos\Persistencia\FiltroFacturaNuevo.cs" />
-    <Compile Include="Semicrol\Cursos\Persistencia\IFacturaRepositorio.cs" />
-    <Compile Include="Semicrol\Cursos\Persistencia\LineaFactura.cs" />
-    <Compile Include="Semicrol\Cursos\Persistencia\LineaFacturaRepository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Dominio\Dominio.csproj">
-      <Project>{3477e964-ab85-474d-9e26-4bbab604fdfc}</Project>
-      <Name>Dominio</Name>
-    </ProjectReference>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
