--- a/Formulario1/App.config
+++ b/Formulario1/App.config
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  
+  <connectionStrings>
+    <add name="miConexion" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\formacion\source\repos\Francisco Sierra Luciarte\Curso_Semicrol\BBDD\BD2\Facturacion_DB.mdf;Integrated Security=True;Connect Timeout=30" />
+    <add name="ConexionCine" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\formacion\source\repos\Francisco Sierra Luciarte\Curso_Semicrol\BBDD\BD1\prueba.mdf;Integrated Security=True;Connect Timeout=30" />
+    <add name="Formulario1.Properties.Settings.Facturacion_DBConnectionString"
+      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Facturacion_DB.mdf;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
